@@ -1,5 +1,11 @@
 2010-09-20  Colin Watson  <cjwatson@ubuntu.com>
 
+	* grub-core/commands/efi/lsefisystab.c: Correct header.
+	* grub-core/commands/efi/lssal.c: Likewise.
+	* grub-core/commands/testload.c: Likewise.
+
+2010-09-20  Colin Watson  <cjwatson@ubuntu.com>
+
 	* util/grub-mkrescue.in: Add explicit root argument to --set to
 	prevent the UUID being interpreted as an argument to --set (matches
 	previous change to prepare_grub_to_access_device).
